# Enumciados_Practicas_CUDA

./: README.md
filter-alumnos/: CMakeLists.txt  cmakeVisual2017.bat  main.cpp
tone-mapping-code/: CMakeLists.txt  Makefile  cmakeVisual2019.bat  funcHDR.cu
